--- a/templates/citation/favorites.html.twig
+++ b/templates/citation/favorites.html.twig
@@ -7,8 +7,7 @@
     {% for citation in citations %}
         {{ citation.content }} <br>
         {{ citation.character }} <br>
-        {{ citation.id }}
-        <a href="{{ path('app_citation_removefavorite',{id:citation.id}) }}" class="btn btn-danger">Supprimer cette citation?</a>
+        <a href="{{ path('app_citation_removefavorite',{id:citation.id}) }}" class="btn btn-danger mt-3 mb-3">Supprimer cette citation?</a>
         <hr>
         <br>
     {% endfor %}
